raw/NAUFAL ASWITA AMANULLAH MUHAMMAD 6420 245150207111060/2024-11-14-08-28-26.ceg/compilation.txt
NT.java:35: error: cannot find symbol
		int akhir=bagi(d)/2;
		               ^
  symbol:   variable d
  location: class NT
NT.java:67: error: method input in class NT cannot be applied to given types;
        double[] input = input();
                         ^
  required: int,int,int,int,int
  found:    no arguments
  reason: actual and formal argument lists differ in length
2 errors
Not compiled
